--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.22",
     "country-list": "^2.3.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
