--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
+    "@vueuse/motion": "^2.2.3",
     "country-list": "^2.3.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
