--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^10.9.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/country-list": "^2.1.4",
@@ -33,6 +34,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.1.0",
