--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
+    "test": "cypress run",
     "test:e2e": "cypress open",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
