--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/country-list": "^2.1.4",
+    "@types/cypress": "^1.1.3",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
