test: added Cypress setup

--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "vite": "^5.3.1",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true,
+    "stepDefinitions": "tests/e2e/steps"
   }
 }
