--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^20.1.2",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.3",
     "@cucumber/cucumber": "^10.9.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
@@ -38,8 +40,9 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
-    "cypress": "^13.13.3",
+    "cypress": "^13.14.2",
     "cypress-cucumber-preprocessor": "^4.3.1",
+    "esbuild": "^0.23.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.1.0",
