--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
-    "@vue/cli-service": "^5.0.8",
+    "@vue/cli-service": "^3.3.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
@@ -44,6 +44,7 @@
     "cypress-cucumber-preprocessor": "^4.3.1",
     "esbuild": "^0.23.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
@@ -56,7 +57,6 @@
     "vue-tsc": "^2.0.21"
   },
   "cypress-cucumber-preprocessor": {
-    "nonGlobalStepDefinitions": true,
-    "stepDefinitions": "cypress/e2e/tests"
+    "nonGlobalStepDefinitions": true
   }
 }
